<resources>
    <string name="app_name">RecipeBookApp</string>
    <string name="app_version">App version</string>

    <string name="ADD">Add</string>
    <string name="Direction">Direction</string>
    <string name="CANCEL">Cancel</string>
    <string name="Amount">Amount</string>
    <string name="Name">Name</string>
    <string name="Log_out">Log out</string>
    <string name="guest">guest</string>
    <string name="Welcome">Welcome</string>
    <string name="time">Time</string>
    <string name="recipe_name">Recipe name</string>
    <string name="img">Img</string>
    <string name="category">Category:</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="liked_recipes">Liked</string>
    <string name="recipes">Recipes</string>
    <string name="about_me">About Me:</string>
    <string name="about_you">About You</string>
    <string name="no_information">No information…</string>
    <string name="author">Author:</string>
    <string name="time_">Time:</string>
    <string name="create_account">Create Account</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">Create</string>
    <string name="welcome_nplease_log_in">Welcome!\nLogin into your account</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="recipe_added">Recipe added</string>
    <string name="add_directions">Add directions</string>
    <string name="choose_time">Choose time</string>
    <string name="insert_image">Insert image</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="the_field_cant_be_empty">The field can\'t be empty</string>
    <string name="you_have_to_accept_permission_to_load_image">You have to accept permission to load image</string>
    <string name="the_list_of_recipes_is_empty">The list of recipes is empty</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="new_direction">New direction</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="please_enter_the_direction">Please, enter the direction</string>
    <string name="please_enter_the_ingredient">Please, enter the ingredient</string>

    <!--Errors-->
    <string name="please_fill_out_all_the_fields">Please, fill out all the fields</string>
    <string name="ERROR_PASSWORDS_DO_NOT_MATCH">The passwords do not match</string>
    <string name="EMAIL_IS_NOT_ACTIVATED">Email is not activated. Please, activate your email</string>
    <string name="ERROR_USER_NOT_FOUND">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="ERROR_INVALID_EMAIL">The email address is badly formatted.</string>
    <string name="ERROR_WRONG_PASSWORD">The password is invalid or the user does not have a password.</string>
    <string name="ERROR_USER_DISABLED">The user account has been disabled by an administrator.</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">The email address is already in use by another account.</string>
    <string name="ERROR_ACTIVATION_LINK_SENT_TO_YOU">An activation link has been sent to your E-Mail. Please click it to activate your account</string>

    <string name="unit">Unit</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="ok" translatable="false">OK</string>
    <string name="new_recipe">New recipe</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="language">Language</string>
    <string name="color_theme">Color Theme</string>
    <string name="notification">Notifications</string>
    <string name="notifications_are_disabled">Notifications are disabled</string>
    <string name="notifications_are_enabled">Notifications are enabled</string>
    <string name="contacts">Contacts</string>
    <string name="feedback">Feedback</string>
    <string name="click_here_to_send_an_email_to_us">Click here to send an email to us</string>
    <string name="App_version">App Version</string>
    <string name="main">Main</string>
    <string name="set_time">(set time)</string>
    <string name="set_image">(set image)</string>
    <string name="hour">Hr</string>
    <string name="min">min</string>
    <string name="disconnected">You are currently offline</string>
    <string name="connected">The connection is restored</string>

    <string name="cookies">COOKIES</string>
    <string name="traditional">TRADITIONAL</string>
    <string name="sandwich">SANDWICH</string>
    <string name="pizza">PIZZA</string>
    <string name="cocktails">COCKTAILS</string>
    <string name="desserts">DESSERTS</string>
    <string name="salads">SALADS</string>

    <string name="the_image_of_your_recipe">The image of your recipe</string>
    <string name="next_step_of_creation_recipe">Next step of creation recipe</string>
    <string name="no_network_connection">No network connection</string>
    <string name="no_internet_connection_connect_to_the_internet_and_try_again">No internet connection. Connect to the internet and try again</string>
    <string name="click_to_choose_profile_s_image">click to choose profile image</string>
    <string name="like_button">like button</string>
    <string name="delete_direction">delete direction</string>
    <string name="delete_ingredient">delete ingredient</string>
    <string name="increment_amount_of_ingredient">Increment amount of ingredient</string>
    <string name="decrement_amount_of_ingredient">decrement amount of ingredient</string>
    <string name="the_image_of_recipe">the image of recipe</string>
    <string name="recipes_of_particular_type">Recipes of a specific category</string>
    <string name="Dont_have_an_account_Swipe_up_to_register">Don\'t have an account? Swipe up to register!</string>
    <string name="Already_have_an_account_Swipe_down_to_login">Already have an account?\nSwipe down to login!</string>
    <string name="an_unknown_error_occurred">An unknown error occurred</string>
    <string name="recipe_successfully_deleted">Recipe successfully deleted</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>

    <string-array name="recipeTypes">
        <item>@string/cookies</item>
        <item>@string/traditional</item>
        <item>@string/sandwich</item>
        <item>@string/pizza</item>
        <item>@string/cocktails</item>
        <item>@string/desserts</item>
        <item>@string/salads</item>
    </string-array>
</resources>